testcases/bad/isvoid.cl
class Main inherits IO {
    main(): Object {
        let x: Main in {
            if isvoid x then out_string("x is void\n") else out_string("x is not void\n") fi;
        }
    };
};
